# editspeed

./: README.md  editspeed.py  example.md  hello.py  pyproject.toml  rainbow.txt
