[project]
name = "editspeed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "editdistance>=0.8.1",
    "ptterm>=0.2",
]

[project.scripts]
editspeed = "editspeed:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "S607",    # Starting a process with a partial executable path
    "S603",    # Wants shell=True
    "T201",    # Forbids print
    "DTZ005",  # Ignore timezones
    "PLW2901", # Shadowing of with variable
    "D100",    # Don't care about docstrings
    "D103",    # Don't care about docstrings
]
